base/frontend/sourcegraph-frontend.Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    ### REMEMBER TO INPUT IP ALLOW LIST ##
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
  labels:
    app: sourcegraph-frontend
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
    app.kubernetes.io/component: frontend
  name: sourcegraph-frontend
spec:
  rules:
  - host: sourcegraph.ds.unity3d.com
    http:
      paths:
      - backend:
          serviceName: sourcegraph-frontend
          servicePort: 30080
        path: /
